--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             --cursor-size: 32px; /* Size of cursor */
             
             /* CURSOR TRAIL CONFIGURATION */
-            --cursor-trail-enabled: true; /* Set to false to disable trail */
+            --cursor-trail-enabled: false; /* Set to false to disable trail */
             --cursor-trail-image: url('./images/trail.gif'); /* Your trail image/gif */
             --cursor-trail-size: 24px; /* Size of trail elements */
             --cursor-trail-count: 8; /* Number of trail elements */
