--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             --hero-logo-height: 120px;
             
             /* LOGO FALLBACK TEXT */
-            --logo-fallback-text: "comgirl";
-            --hero-fallback-text: "comgirl";
-            --entry-fallback-text: "comgirl";
+            --logo-fallback-text: "";
+            --hero-fallback-text: "";
+            --entry-fallback-text: "";
             
             /* CURSOR CONFIGURATION */
             --cursor-enabled: true; /* Set to false to use default cursor */
