--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             
             /* CURSOR CONFIGURATION */
             --cursor-enabled: true; /* Set to false to use default cursor */
-            --cursor-image: url('./images/cursor.png'); /* Your cursor image/gif */
+            --cursor-image: url('./images/cursor.gif'); /* Your cursor image/gif */
             --cursor-size: 32px; /* Size of cursor */
             
             /* CURSOR TRAIL CONFIGURATION */
