--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
            =============== */
         @font-face {
             font-family: 'CustomPrimary';
-            src: url('./fonts/primary-regular.woff2') format('woff2'),
-                 url('./fonts/primary-regular.woff') format('woff'),
-                 url('./fonts/primary-regular.ttf') format('truetype');
+            src: url('./fonts/spotify.woff2') format('woff2'),
+                 url('./fonts/spotify.woff2') format('woff2'),
+                 url('./fonts/spotify.woff2') format('woff2');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
@@ -20,9 +20,9 @@
 
         @font-face {
             font-family: 'CustomPrimary';
-            src: url('./fonts/primary-bold.woff2') format('woff2'),
-                 url('./fonts/primary-bold.woff') format('woff'),
-                 url('./fonts/primary-bold.ttf') format('truetype');
+            src: url('./fonts/spotify.woff2') format('woff2'),
+                 url('./fonts/spotify.woff2') format('woff2'),
+                 url('./fonts/spotify.woff2') format('woff2');
             font-weight: bold;
             font-style: normal;
             font-display: swap;
@@ -30,9 +30,9 @@
 
         @font-face {
             font-family: 'CustomDecorative';
-            src: url('./fonts/decorative-regular.woff2') format('woff2'),
-                 url('./fonts/decorative-regular.woff') format('woff'),
-                 url('./fonts/decorative-regular.ttf') format('truetype');
+            src: url('./fonts/spotify.woff2') format('woff2'),
+                 url('./fonts/spotify.woff2') format('woff2'),
+                 url('./fonts/spotify.woff2') format('woff2');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
