--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
         @font-face {
             font-family: 'CustomDecorative';
-            src: url('./fonts/decorative-bold.woff2') format('woff2'),
-                 url('./fonts/decorative-bold.woff') format('woff'),
-                 url('./fonts/decorative-bold.ttf') format('truetype');
+            src: url('./fonts/spotify.woff2') format('woff2'),
+                 url('./fonts/spotify.woff2') format('woff2'),
+                 url('./fonts/spotify.woff2') format('woff2');
             font-weight: bold;
             font-style: normal;
             font-display: swap;
@@ -50,9 +50,9 @@
 
         @font-face {
             font-family: 'CustomMono';
-            src: url('./fonts/mono-regular.woff2') format('woff2'),
-                 url('./fonts/mono-regular.woff') format('woff'),
-                 url('./fonts/mono-regular.ttf') format('truetype');
+            src: url('./fonts/spotify.woff2') format('woff2'),
+                 url('./fonts/spotify.woff2') format('woff2'),
+                 url('./fonts/spotify.woff2') format('woff2');
             font-weight: normal;
             font-style: normal;
             font-display: swap;
